<resources>
    <string name="app_name">Ripper</string>
    <string name="title_home">Home</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This username or/and password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure you want to exit Ripper?</string>
</resources>
